[gd_scene load_steps=17 format=2]

[ext_resource path="res://Cenas/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sprites/font/04B_30__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameOver background.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/Sons/sfx-defeat2.mp3" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 12 )
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_color = Color( 0.972549, 1, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 44
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.504902, 0.90843 )
texture = ExtResource( 3 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 347.0
margin_top = 317.0
margin_right = 651.0
margin_bottom = 400.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 25.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.160784, 0.831373, 1 )
custom_fonts/font = SubResource( 7 )
text = "Jogar novamente"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 304.0
margin_bottom = 54.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.160784, 0.831373, 1 )
custom_fonts/font = SubResource( 8 )
text = "Tela inicial"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 304.0
margin_bottom = 83.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.160784, 0.831373, 1 )
custom_fonts/font = SubResource( 9 )
text = "Sair"

[node name="Label" type="Label" parent="."]
margin_left = 305.0
margin_top = 255.0
margin_right = 707.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 10 )
text = "Pontuacao final: "

[node name="Label2" type="Label" parent="."]
margin_left = 695.0
margin_top = 259.0
margin_right = 727.0
margin_bottom = 287.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 11 )

[node name="Label3" type="Label" parent="."]
margin_left = 279.0
margin_top = 18.0
margin_right = 748.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 17 )
text = "VOCE PERDEU!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -9.0

[connection signal="ready" from="." to="." method="_on_GameOver_ready"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
